fixed button alignment

--- a/less/updateUserForm.less
+++ b/less/updateUserForm.less
@@ -22,7 +22,6 @@ body {
   
   button {
     margin-top: 1rem;
-    padding-left: 20px;
   }
   
   .user-details-container {
