--- a/static/index.css
+++ b/static/index.css
@@ -332,7 +332,6 @@ textarea {
 }
 button {
   margin-top: 1rem;
-  padding-left: 20px;
 }
 .user-details-container {
   border: 1px solid #ccc;
